# intelephense-mpc-windows

./: .gitignore  .mcp.json  HOW_TO_INTEGRATE_INTO_YOUR_PROJECT.md  MCP.md  README.md  capabilities.bat  check.bat  definition.bat  hover.bat  mcp-server.bat  pyproject.toml  references.bat  search.bat  start.bat  symbols.bat  test_errors.php
src/intelephense_watcher/: __init__.py  api.py  diagnostics.py  file_handler.py  lsp_client.py  main.py  mcp_server.py
src/intelephense_watcher/config/: __init__.py  constants.py  settings.py
src/intelephense_watcher/utils/: __init__.py  uri.py
tests/: __init__.py  test_diagnostics_display.py  test_file_handler.py  test_lsp_client.py
