[project]
name = "intelephense-watcher"
version = "1.0.0"
description = "Watch PHP files and display Intelephense LSP diagnostics in real-time"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "watchdog>=6.0.0",
    "mcp[cli]>=1.2.0",
]

[project.scripts]
intelephense-watcher = "intelephense_watcher.main:main"
intelephense-mcp = "intelephense_watcher.mcp_server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/intelephense_watcher"]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_ignores = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
